--- a/app.json
+++ b/app.json
@@ -9,7 +9,10 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "runtimeVersion": {
+        "policy": "appVersion"
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -18,9 +21,11 @@
       },
       "edgeToEdgeEnabled": true,
       "permissions": [
+        "android.permission.CAMERA",
         "android.permission.CAMERA"
       ],
-      "package": "com.gionahh.qrcode"
+      "package": "com.gionahh.qrcode",
+      "runtimeVersion": "1.0.0"
     },
     "web": {
       "bundler": "metro",
@@ -37,17 +42,17 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ],
-      "expo-barcode-scanner"
+      ]
     ],
     "experiments": {
       "typedRoutes": true
     },
     "extra": {
-      "router": {},
-      "eas": {
-        "projectId": "e808083a-ec19-4573-b957-28198776b1fb"
-      }
+      "router": {}
+    },
+    "owner": "yowalun",
+    "updates": {
+      "url": "https://u.expo.dev/5eb7fb87-6ce1-4617-96ee-fa180d52caee"
     }
   }
 }
